...
                                <rect key="frame" x="155.5" y="294" width="64" height="29"/>
                                <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                <state key="normal" title="Register">
                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
        <scene sceneID="tbh-yG-xcX">
            <objects>
                <viewController storyboardIdentifier="server" id="LPm-N3-FEI" userLabel="Server" customClass="ServerViewController" customModule="wallabag" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="znn-gf-Efm"/>
...
                                <rect key="frame" x="169" y="160" width="37" height="29"/>
                                <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                <state key="normal" title="Next"/>
                                <connections>
                                    <action selector="nextPressed:" destination="LPm-N3-FEI" eventType="touchUpInside" id="VIi-UA-aNq"/>
...
        <scene sceneID="VmF-x9-ghS">
            <objects>
                <viewController id="hyy-VQ-rcz" userLabel="ClientId" customClass="ClientIdViewController" customModule="wallabag" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="T3x-Ud-Wa2"/>
...
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ClientSecret" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iBk-4L-sqH">
                                <rect key="frame" x="16" y="160" width="343" height="30"/>
                                <nil key="textColor"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C1D-rB-gOJ">
                                <rect key="frame" x="16" y="122" width="343" height="30"/>
                                <nil key="textColor"/>
...
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UQC-pk-uO1">
                                <rect key="frame" x="16" y="160" width="343" height="30"/>
                                <nil key="textColor"/>
...
